# Concept-Bottleneck-UI

./: pyproject.toml
concept_model/: concept_model.py
cub2011/: cub2011.py
server/: app.py  index.html
train/: concept2class.pth  inference.py  train.py
